# Volnita

./: .gitignore  Cargo.toml  LICENSE  README.md  workspace.code-workspace
src/: app_flags.rs  commit_table.rs  data_table.rs  git_command.rs  input_mode.rs  main.rs  repo.rs  volnita.rs
src/command/: command_handler.rs  construct_handler.rs  git_command.rs  mod.rs
src/config/: mod.rs  repo.rs
src/display/: commt_history.rs  mod.rs
src/git/: mod.rs
src/traits/: display_view.rs  mod.rs  view_input_field.rs
src/view_components/: input_field.rs  mod.rs
src/views/: mod.rs  opened_repo_view.rs  start_view.rs
