[package]
name = "volnita"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termcolor = "1.1.3"
git2 = "0.17.1"
tui = { package = "ratatui", version = "0.21.0", features = ["all-widgets"]}
tui-input = "0.7.0"
crossterm = "0.26.1"
serde = "1.0.163"
credentials = "0.12.0"
toml = "0.7.4"
dirs = "5.0.1"
